@@ -118,6 +118,8 @@ LIBDI_4.2 {
     di_package_priority_text;
     di_package_status_want_text;
     di_package_status_text;
+    di_system_packages_resolve_dependencies_array_permissive;
+    di_system_packages_resolve_dependencies_mark_kernel;
 } LIBDI_4.1;
 
 #LIBDI_PRIVATE {
