@@ -3,12 +3,15 @@ libdebian-installer (0.19.cvs) UNRELEASED; urgency=low
   * Bastian Blank
     - Bump revision to 2.
     - Add conversation functions for parts of a package entry.
-    - Dependency resolver supports Conflicts (request from joeyh@debian.org).
+    - Add support for Kernel-Version to Packages parser.
     - Fix dependency resolver marker reset.
+    - Split dependency resolver.
+    - Add two special dependency resolver types for anna (checks
+      Kernel-Version) and main-menu (never fails).
   * Stephen R. Marenka
     - Add scsi cd (scd?) device info to mapdevfs.
 
- -- Bastian Blank <waldi@debian.org>  Sat, 28 Feb 2004 00:08:53 +0100
+ -- Bastian Blank <waldi@debian.org>  Tue, 09 Mar 2004 18:08:39 +0100
 
 libdebian-installer (0.19) unstable; urgency=low
 
